fix: read a ZGC log as ZGC, and stop calling VM workers a starved pool
The corpus had no ZGC capture, so nothing in the build ever asked what "major collection"
means to a collector that has no Full GC. Capturing a real one (this JDK, `-XX:+UseZGC
-Xmx1g`, the existing victim's leak endpoint) produced three false conclusions from 0.1.2,
two of them confident:

  TDA005 named "All 4 workers of "ZWorker" are occupied and 4 of them sit in the same
    frame (<empty stack>)" as the top hypothesis.  jstack quotes ZGC's workers like threads
    with no state line and no frames; a family of them is not a pool. JThread.isVmWorker()
    (no frames, no monitors, no ownable synchronizers) now keeps them out of every
    name-family grouping, which also covers TDA003/TDA004/TDA006.
  GCA006 reported 63.4% of wall time in stop-the-world pauses on a JVM whose real total was
    ~10 ms out of 48.8 s. [gc,stats] prints rolling averages per collection and the merge
    took the last ms it saw -- a "30.142 / 613.231 ms" cell became that collection's pause.
    Statistics rows are now skipped by shape, and a record's summary duration is separated
    from its phase durations (summed) and from its concurrent durations (never counted).
  GCA001/GCA003 said nothing about a heap pinned at 99%, because both read Kind.FULL.
    GcLog.isMajor(kind) maps the whole-heap concurrent cycle to "major" under ZGC and
    Shenandoah, so the new corpus/incident-zgc-leak is reported as
    "Across 278 major collections the heap low-water mark climbed from 20M to 1012M
    (+4960%) ... (capacity 1024M)" and ranks the leak first -- same planted bug as
    incident-heap-leak, collector with no Full GC. ZGC's percentage-only occupancy
    (1014M(99%)->1012M(99%)) is read with Max Capacity as the denominator, and a
    percentage can no longer be mistaken for a GC cause.

Allocation Stall becomes a first-class event and GCA007: 19 rules. It is the only signal
ZGC gives for "the mutator outran the collector"